--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -48,7 +48,7 @@
             "title": "Mundo Píxel",
             "link": "https://www.mundopixel.com.mx/",
             "image": "/mundopixel-logo-words.svg",
-            "className": "object-contain px-5"
+            "className": "object-contain px-6 bg-black border-b"
         },
         {
             "title": "The Doctor Photo",
@@ -72,7 +72,7 @@
             "title": "Nutrikas - (Redesign in progress)",
             "link": "https://nutrikas.com.mx/",
             "image": "/nutrikas-logo.png",
-            "className": "object-contain px-4"
+            "className": "object-contain px-6 bg-black border-b"
         },
         {
             "title": "Optum Resources",
@@ -109,6 +109,16 @@
             "link": "https://optumwa.com/",
             "image": "/optum_orng_bg.png",
             "className": "object-cover"
+        }
+    ],
+    "implementations_title": "Solutions and services I've offered",
+    "implementations_description": "Here are some examples of implementations I have carried out to improve functionality and user experience in some projects.",
+    "implementations": [
+        {
+            "name": "Interactive chart implementation",
+            "resource": "/videos/2025-08-20 16-47-44.mp4",
+            "description": "Are you looking for a way to present complex data clearly? This implementation shows you how to create an interactive chart so your users can understand the information at a glance.",
+            "link": "https://cryptodashboard.victorsweb.site/"
         }
     ],
     "link_label": "Check project"
