--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -48,7 +48,7 @@
             "title": "Mundo Píxel",
             "link": "https://www.mundopixel.com.mx/",
             "image": "/mundopixel-logo-words.svg",
-            "className": "object-contain px-5"
+            "className": "object-contain px-6 bg-black border-b"
         },
         {
             "title": "The Doctor Photo",
@@ -72,7 +72,7 @@
             "title": "Nutrikas - (Rediseño en progreso)",
             "link": "https://nutrikas.com.mx/",
             "image": "/nutrikas-logo.png",
-            "className": "object-contain px-4"
+            "className": "object-contain px-5 bg-black border-b"
         },
         {
             "title": "Optum Resources",
@@ -109,6 +109,16 @@
             "link": "https://optumwa.com/",
             "image": "/optum_orng_bg.png",
             "className": "object-cover"
+        }
+    ],
+    "implementations_title": "Soluciones y servicios que he ofrecido",
+    "implementations_description": "Aquí hay algunos ejemplos de implementaciones que he realizado para mejorar la funcionalidad y la experiencia del usuario en algunos proyectos.",
+    "implementations": [
+        {
+            "name": "Implementación de gráfica interactiva",
+            "resource": "/videos/2025-08-20 16-47-44.mp4",
+            "description": "¿Buscas una forma de presentar datos complejos de manera clara? Esta implementación te muestra cómo crear un gráfico interactivo para que tus usuarios entiendan la información de un vistazo.",
+            "link": "https://cryptodashboard.victorsweb.site/"
         }
     ],
     "link_label": "Ver proyecto"
